--- a/src/AccueilBundle/Resources/views/layout.html.twig
+++ b/src/AccueilBundle/Resources/views/layout.html.twig
@@ -8,14 +8,18 @@
 
     {% block stylesheets %}
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
         <link rel="stylesheet" href="{{ asset('css/css.css') }}">
-        <script>
+    {% endblock %}
+    <script>
+        $(function(){
+            $('#div').hide();
+        });
+    </script>
+    <!--<script>
             $(function() {
                 $( "#datepicker" ).datepicker();
             });
-        </script>
-    {% endblock %}
+        </script>-->
 </head>
 
 <body>
@@ -40,6 +44,7 @@
     </nav>
 
     <div class="body">
+        <p id="div">Hello</p>
         {% block body %}
 
         {% endblock %}
@@ -51,22 +56,9 @@
 </div>
 
 {% block javascripts %}
-    <script>
-        jQuery(document).ready(function() {
-            jQuery("#calendar").datepicker({
-                beforeShowDay: function (date) {
-                    if (date.getDay() == 1 || date.getDay() == 4) { // La semaine commence à 0 = Dimanche
-                        return [false, ''];
-                    } else {
-                        return [true, ''];
-                    }
-                }
-            });
-        });
-    </script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js" integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw=" crossorigin="anonymous"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="{{ asset('https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js') }}"></script>
+    <script src="{{ asset('https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js') }}"></script>
+    <script src="{{ asset('http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js') }}"></script>
 {% endblock %}
 </body>
 </html>
