--- a/src/AccueilBundle/Resources/views/layout.html.twig
+++ b/src/AccueilBundle/Resources/views/layout.html.twig
@@ -56,9 +56,9 @@
 </div>
 
 {% block javascripts %}
-    <script src="{{ asset('https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js') }}"></script>
-    <script src="{{ asset('https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js') }}"></script>
-    <script src="{{ asset('http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js') }}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 {% endblock %}
 </body>
 </html>
