--- a/src/AccueilBundle/Resources/views/layout.html.twig
+++ b/src/AccueilBundle/Resources/views/layout.html.twig
@@ -55,7 +55,7 @@
             $("form input.date").datepicker({
                 dateFormat: 'dd/mm/yy',
                 firstDay:1
-            });
+            }).attr("readonly","readonly");
         });
     </script>
 {% endblock %}
