Modif Twig formulaire

--- a/src/AccueilBundle/Resources/views/Reservation/date.html.twig
+++ b/src/AccueilBundle/Resources/views/Reservation/date.html.twig
@@ -10,10 +10,10 @@
             <div class="jumbotron">
                 <h2>Choississez votre date de réservation</h2>
                     <form action="" method="get">
-                        <strong>Date de la visite :</strong><br>
+                        <strong>Date de la visite (dd-mm-yyyy) :</strong><br>
                         <input type="text" class="date" name="date"><br><br>
 
-                        <strong>Demi journée :</strong><br>
+                        <strong>Demi journée (à partir de 14h) :</strong><br>
                         <input type="radio" name="demijournee" value="oui" id="oui" />
                         <label for="oui">Oui</label><br>
 
