--- a/src/AccueilBundle/Resources/views/Reservation/reservation.html.twig
+++ b/src/AccueilBundle/Resources/views/Reservation/reservation.html.twig
@@ -14,7 +14,10 @@
                 <h3>{{ date }}</h3>
                 <h3>Demi journée : {{ dj }}</h3>
                 {{ form_start(form) }}
-                {{ form(form) }}
+                {{ form_errors(form) }}
+
+                {{ form_row(form.email) }}
+
                 {{ form_end(form) }}
             </div>
         </div>
