--- a/src/AccueilBundle/Resources/views/Accueil/home.html.twig
+++ b/src/AccueilBundle/Resources/views/Accueil/home.html.twig
@@ -20,7 +20,7 @@
                             <p><i>à partir de 12 ans</i></p>
                         </div>
                         <p>
-                            <a class="btn btn-default">16 €</a>
+                            <a class="btn btn-default prix_accueil">16 €</a>
                             <a class="btn btn-primary" href="{{ path('reservation_date') }}">Réserver</a>
                         </p>
                     </div>
@@ -34,7 +34,7 @@
                             <p><i>à partir de 4 ans et jusqu’à 12 ans (l’entrée est gratuite pour les enfants de moins de 4 ans)</i></p>
                         </div>
                         <p>
-                            <a class="btn btn-default">8 €</a>
+                            <a class="btn btn-default prix_accueil">8 €</a>
                             <a class="btn btn-primary" href="{{ path('reservation_date') }}">Réserver</a>
                         </p>
                     </div>
@@ -48,7 +48,7 @@
                             <p><i>à partir de 60 ans</i></p>
                         </div>
                         <p>
-                            <a class="btn btn-default">12 €</a>
+                            <a class="btn btn-default prix_accueil">12 €</a>
                             <a class="btn btn-primary" href="{{ path('reservation_date') }}">Réserver</a>
                         </p>
                     </div>
@@ -62,7 +62,7 @@
                             <p><i>accordé dans certaines conditions (étudiant, employé du musée, d’un service du Ministère de la Culture, militaire…)</i></p>
                         </div>
                         <p>
-                            <a class="btn btn-default">10 €</a>
+                            <a class="btn btn-default prix_accueil">10 €</a>
                             <a class="btn btn-primary" href="{{ path('reservation_date') }}">Réserver</a>
                         </p>
                     </div>
@@ -76,7 +76,7 @@
                             <p><i>2 adultes et 2 enfants ayant le même nom de famille</i></p>
                         </div>
                         <p>
-                            <a class="btn btn-default">35 €</a>
+                            <a class="btn btn-default prix_accueil">35 €</a>
                             <a class="btn btn-primary" href="{{ path('reservation_date') }}">Réserver</a>
                         </p>
                     </div>
