--- a/src/AccueilBundle/Resources/views/Reservation/date.html.twig
+++ b/src/AccueilBundle/Resources/views/Reservation/date.html.twig
@@ -11,7 +11,7 @@
                 <div class="jumbotron">
                 <h2>Choississez votre date de réservation</h2>
                     <form action="" method="get">
-                        <strong>Date de la visite (dd-mm-yyyy) :</strong><br>
+                        <strong>Date de la visite (dd-mm-yyyy)</strong><br>
                         <input type="text" class="date form-control" name="date"><br><br>
 
                         <strong>Demi journée (à partir de 14h) :</strong><br>
