--- a/src/AccueilBundle/Resources/views/Reservation/reservation.html.twig
+++ b/src/AccueilBundle/Resources/views/Reservation/reservation.html.twig
@@ -11,6 +11,9 @@
         <div class="row">
             <div class="col-md-offset-1 col-md-10">
                 <div class="jumbotron">
+
+                    {{ dateResa }}
+
                     <h1>Choississez votre type de billets</h1>
                     <h2>{{ date }}</h2>
                     {% if dj == 1 %}
