--- a/src/AccueilBundle/Resources/views/Reservation/reservation.html.twig
+++ b/src/AccueilBundle/Resources/views/Reservation/reservation.html.twig
@@ -3,7 +3,7 @@
 {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
 
 {% block title %}
-    Annonces - {{ parent() }}
+    Réservation - {{ parent() }}
 {% endblock %}
 
 {% block body %}
@@ -12,9 +12,7 @@
             <div class="col-md-offset-1 col-md-10">
                 <div class="jumbotron">
 
-                    {{ dateResa }}
-
-                    <h1>Choississez votre type de billets</h1>
+                    <h1>Entrez vos informations</h1>
                     <h2>{{ date }}</h2>
                     {% if dj == 1 %}
                         <h2>Demi journée</h2>
@@ -49,6 +47,12 @@
                             {{ form_label(gens.nom, "Date de naissance", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
                             <div class="col-md-3">
                                 {{ form_widget(gens.dateNaissance) }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            {{ form_label(gens.tarifReduit, "Tarif réduit", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                            <div class="col-sm-3">
+                                {{ form_widget(gens.tarifReduit) }}
                             </div>
                         </div>
                         <div class="form-group">
