--- a/src/AccueilBundle/Resources/views/Reservation/recap.html.twig
+++ b/src/AccueilBundle/Resources/views/Reservation/recap.html.twig
@@ -26,7 +26,7 @@
                         {% endfor %}
                         <p><strong>Total : {{ reservation.prixTotal }} €</strong></p>
 
-                        <form action="" method="POST">
+                        <form action="{{ path('paiement', {'id': reservation.id }) }}" method="POST">
                             <script
                                     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                                     data-key="pk_test_MQEN4HNJ1LfQGUSCRuo09lOL"
@@ -34,7 +34,8 @@
                                     data-name="Musée du Louvre"
                                     data-description="Billets (€{{ reservation.prixTotal }}.00)"
                                     data-image="http://www.iphon.fr/public/2009/Q4/.musee-louvre-iphone-1_s.jpg"
-                                    data-locale="auto">
+                                    data-locale="auto"
+                                    data-currency="eur">
                             </script>
                         </form>
                 </div>
