--- a/src/AccueilBundle/Resources/views/Reservation/recap.html.twig
+++ b/src/AccueilBundle/Resources/views/Reservation/recap.html.twig
@@ -38,6 +38,9 @@
                                     data-currency="eur">
                             </script>
                         </form>
+
+                        <br><img src="https://www.paypal.com/fr_XC/i/btn/btn_xpressCheckout.gif" align="left" style="margin-right:7px;">
+
                 </div>
             </div>
         </div>
